--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/ui": "^4.1.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "moment": "^2.30.1",
     "pinia": "^3.0.4",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.3",
