--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^3.0.4",
     "vue": "^3.5.22",
     "vue-chartjs": "^5.3.3",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
