--- a/backend/Api/Domain/Domain.csproj
+++ b/backend/Api/Domain/Domain.csproj
@@ -10,4 +10,8 @@
 	<FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
+  </ItemGroup>
+
 </Project>
