--- a/backend/Api/Host/appsettings.json
+++ b/backend/Api/Host/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Identity": {
+    "ClientId": "lvAnsUoUo2FKPHJddnG5O4nmQ5ZwHDFK",
+    "ClientSecret": "<Enter as user secret>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,5 +15,12 @@
   },
   "ConnectionStrings": {
     "Postgres": "<Enter as user secret>"
+  },
+  "Auth0": {
+    "Domain": "dev-y0lutlfv.auth0.com",
+    "Audience": "https://api.dashboard.bsmitech.com/",
+    "Apps": {
+      "ERP-Dashboard": "gge622sB8fQEHENPyFvV90zYFmnaflR9"
+    }
   }
 }
