--- a/backend/Api/Infrastructure/Infrastructure.csproj
+++ b/backend/Api/Infrastructure/Infrastructure.csproj
@@ -11,13 +11,20 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Auth0.AuthenticationApi" Version="7.43.0" />
+	  <PackageReference Include="Auth0.ManagementApi" Version="7.43.0" />
 	  <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
+	  <PackageReference Include="MediatR" Version="14.0.0" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	    <PrivateAssets>all</PrivateAssets>
 	  </PackageReference>
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
 	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 	</ItemGroup>
 
