--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.5.0",
     "@iconify-json/lucide": "^1.2.80",
     "@nuxt/ui": "^4.1.0",
     "axios": "^1.13.2",
