--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,4 @@
-VITE_ERPNEXT_TOKEN={{erpnext_token}}
-VITE_ERPNEXT_URL={{erpnext_url}}
-VITE_ERPNEXT_COMPANY={{erpnext_company}}
 VITE_AUTH0_DOMAIN={{auth0_domain}}
 VITE_AUTH0_CLIENT_ID={{auth0_client_id}}
 VITE_AUTH0_AUDIENCE={{auth0_audience}}
+VITE_API_URL={{api_url}}
