--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,24 +7,42 @@ on:
       - master
 
 jobs:
-  build:
+  frontend:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "22"
 
-      - name: Building Front End
+      - name: Setup Environment Variables
+        working-directory: frontend
         run: |
-          cd frontend
-          sed -e 's|{{erpnext_token}}|$API_KEY|' -e 's|{{erpnext_url}}|https://njeremoto.jh.erpnext.com|' -e 's|{{erpnext_company}}|Njeremoto Enterprises|' .env > .env.production
-          npm install
-          npm run build
+          sed -e 's|{{auth0_domain}}|$AUTH0_DOMAIN|' \
+              -e 's|{{auth0_client_id}}|$AUTH0_CLIENT_ID|' \
+              -e 's|{{auth0_audience}}|$AUTH0_AUDIENCE|' \
+              -e 's|{{api_url}}|$API_URL|' .env > .env.production
+        env:
+          AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+          AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+          AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
+          API_URL: ${{ secrets.API_URL }}
+
+      - name: Install Dependencies
+        working-directory: frontend
+        run: npm install
+
+      - name: Build
+        working-directory: frontend
+        run: npm run build
+
+      - name: Deploy Front End
+        working-directory: frontend
+        run: |
           git clone https://$PAT@github.com/Stelele/njeremoto-dashboard-build.git out
           rm -r out/*
           cp -R dist/* out/
@@ -36,6 +54,30 @@ jobs:
           git commit -m "Deploy build files"
           git push origin $DEPLOY_BRANCH
         env:
-          API_KEY: ${{ secrets.ERPNEXT_API_KEY }}
           DEPLOY_BRANCH: main
           PAT: ${{ secrets.PAT }}
+
+  backend:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push backend image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend/Api/Host
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/erpnext-dashboard:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/erpnext-dashboard:${{ github.sha }}
