--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
       - name: Build and push backend image
         uses: docker/build-push-action@v5
         with:
-          context: ./backend/Api/Host
+          context: ./backend/Api
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/erpnext-dashboard:latest
