--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
               - 'frontend/**'
 
   frontend:
-    needs: changes
-    if: needs.changes.outputs.frontend == 'true'
+    # needs: changes
+    # if: needs.changes.outputs.frontend == 'true'
     runs-on: ubuntu-latest
 
     steps:
@@ -40,26 +40,23 @@ jobs:
         with:
           node-version: "22"
 
-      - name: Setup Environment Variables
-        working-directory: frontend
-        run: |
-          sed -e 's|{{auth0_domain}}|$AUTH0_DOMAIN|' \
-              -e 's|{{auth0_client_id}}|$AUTH0_CLIENT_ID|' \
-              -e 's|{{auth0_audience}}|$AUTH0_AUDIENCE|' \
-              -e 's|{{api_url}}|$API_URL|' .env > .env.production
-        env:
-          AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
-          AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-          AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
-          API_URL: ${{ secrets.API_URL }}
-
       - name: Install Dependencies
         working-directory: frontend
         run: npm install
 
       - name: Build
         working-directory: frontend
-        run: npm run build
+        run: |
+          sed -e 's|{{auth0_domain}}|$AUTH0_DOMAIN|' \
+              -e 's|{{auth0_client_id}}|$AUTH0_CLIENT_ID|' \
+              -e 's|{{auth0_audience}}|$AUTH0_AUDIENCE|' \
+              -e 's|{{api_url}}|$API_URL|' .env > .env.production
+          npm run build
+        env:
+          AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
+          AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
+          AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
+          API_URL: ${{ secrets.API_URL }}
 
       - name: Deploy Front End
         working-directory: frontend
