--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,13 +50,18 @@ jobs:
           sed -e "s|{{auth0_domain}}|$AUTH0_DOMAIN|" \
               -e "s|{{auth0_client_id}}|$AUTH0_CLIENT_ID|" \
               -e "s|{{auth0_audience}}|$AUTH0_AUDIENCE|" \
-              -e "s|{{api_url}}|$API_URL|" .env > .env.production
+              -e "s|{{api_url}}|$API_URL|" \
+              -e "s|{{erp_api_url}}|$ERP_API_URL|" \
+              -e "s|{{erp_api_token}}|$ERP_API_TOKEN|" .env > .env.production
           npm run build
         env:
           AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
           AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
           AUTH0_AUDIENCE: ${{ secrets.AUTH0_AUDIENCE }}
           API_URL: ${{ secrets.API_URL }}
+          API_TOKEN: ${{ secrets.API_TOKEN }}
+          ERP_API_URL: ${{ secrets.ERP_API_URL }}
+          ERP_API_TOKEN: ${{ secrets.ERP_API_TOKEN }}
 
       - name: Deploy Front End
         working-directory: frontend
