--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,5 @@ VITE_AUTH0_DOMAIN={{auth0_domain}}
 VITE_AUTH0_CLIENT_ID={{auth0_client_id}}
 VITE_AUTH0_AUDIENCE={{auth0_audience}}
 VITE_API_URL={{api_url}}
+VITE_ERP_API_URL={{erp_api_url}}
+VITE_ERP_API_TOKEN={{erp_api_token}}
